--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,40 @@
 
 # --- Core Application Configuration ---
 spring.application.name=digital-wallet-demo
-server.port=8080
+server.port=8081
 
 # --- Environment Configuration (Default/Development) ---
 app.environment=development
 app.message=Welcome to the Digital Wallet Development Environment!
+
+# expose all actuator
+
+management.endpoints.web.exposure.include=*
+
+# Custom info shown in /actuator/info
+management.info.env.enabled=true
+info.app.name=Digital Wallet System
+info.app.version=1.0.0
+info.app.description=A simple digital wallet system built with Spring Boot
+
+# --- H2 / JPA ---
+#spring.datasource.url=jdbc:h2:mem:digital_wallet_db;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+
+# MySQL Datasource
+spring.datasource.url=jdbc:mysql://localhost:3308/digital_wallet_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+
+# H2 console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
