--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,11 @@
 
 # --- Core Application Configuration ---
 spring.application.name=digital-wallet-demo
-server.port=8081
+server.port=8086
+
+#turnoff the springboot banner
+spring.main.banner-mode=off
+
 
 # --- Environment Configuration (Default/Development) ---
 app.environment=development
@@ -29,7 +33,7 @@ info.app.description=A simple digital wallet system built with Spring Boot
 # MySQL Datasource
 spring.datasource.url=jdbc:mysql://localhost:3308/digital_wallet_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=Shubham@2002
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -39,3 +43,7 @@ spring.jpa.properties.hibernate.format_sql=true
 # H2 console
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+#maxlimit ,minlimit
+wallet.max-credit-limit=100000.00
+wallet.max-debit-limit=50000.00
