--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,9 +22,12 @@ info.app.name=Digital Wallet System
 info.app.version=1.0.0
 info.app.description=A simple digital wallet system built with Spring Boot
 
-# --- H2 / JPA ---
+ --- H2 / JPA ---
 #spring.datasource.url=jdbc:h2:mem:digital_wallet_db;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 #spring.datasource.driverClassName=org.h2.Driver
+
+
+
 #spring.datasource.username=sa
 #spring.datasource.password=
 #spring.jpa.hibernate.ddl-auto=update
