--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,7 +22,7 @@ info.app.name=Digital Wallet System
 info.app.version=1.0.0
 info.app.description=A simple digital wallet system built with Spring Boot
 
- --- H2 / JPA ---
+ #--- H2 / JPA ---
 #spring.datasource.url=jdbc:h2:mem:digital_wallet_db;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 #spring.datasource.driverClassName=org.h2.Driver
 
@@ -50,3 +50,22 @@ spring.h2.console.path=/h2-console
 #maxlimit ,minlimit
 wallet.max-credit-limit=100000.00
 wallet.max-debit-limit=50000.00
+# ===============================
+# LOGGING CONFIGURATION
+# ===============================
+
+# Logging levels
+logging.level.root=INFO
+logging.level.com.example.digitalWalletDemo=DEBUG
+logging.level.org.springframework.web=INFO
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# Log file output
+logging.file.name=logs/digital-wallet.log
+
+# Log pattern for console
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+
+# Log pattern for file
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
