--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -50,6 +50,20 @@ spring.h2.console.path=/h2-console
 #maxlimit ,minlimit
 wallet.max-credit-limit=100000.00
 wallet.max-debit-limit=50000.00
+
+
+# new daily/monthly limits
+wallet.daily-debit-limit=10000.00
+wallet.monthly-debit-limit=50000.00
+wallet.daily-credit-limit=20000.00
+wallet.monthly-credit-limit=100000.00
+
+# Make sure all timestamps are stored and read in UTC
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+
+
+
+
 # ===============================
 # LOGGING CONFIGURATION
 # ===============================
@@ -60,6 +74,8 @@ logging.level.com.example.digitalWalletDemo=DEBUG
 logging.level.org.springframework.web=INFO
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+
 
 # Log file output
 logging.file.name=logs/digital-wallet.log
